8277447: Hotspot C1 compiler crashes on Kotlin suspend fun with loop

Reviewed-by: kvn, neliasso